# baresip

cmake/: modules.cmake
modules/gRPC/: BaresipController.cpp  CMakeLists.txt
modules/gRPC/protos/: baresip_controller.proto
